<resources>
    <string name="app_name">SqlEx</string>
    <string name="hint_name">please enter name</string>
    <string name="hint_cell">please enter cell no</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_show_data">Show Data</string>
    <string name="btn_edit_data">Edit Data</string>
    <string name="btn_delete_data">Delete Data</string>
    <string name="data">Data From DATABASE will be displayed</string>
</resources>
